[package]
name = "arb"
version = "0.1.0"
edition = "2021"
description = "Localize flutter apps with DeepL AI translations"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
authors = ["saveoursecrets-developers <dev@saveoursecrets.com>"]
default-run = "arb"
categories = [
  "command-line-utilities",
]

[workspace]
members = [
  "crates/lib"
]
resolver = "2"

[dev-dependencies]
anyhow = "1"
arb-lib = { path = "crates/lib" }
tokio = { version = "1", features = ["macros"]}
