[package]
name = "arb"
version = "0.1.0"
edition = "2021"
description = "Localize flutter apps with DeepL AI translations"
homepage = "https://saveoursecrets.com"
repository = "https://github.com/saveoursecrets/arb"
license = "MIT OR Apache-2.0"
authors = ["saveoursecrets-developers <dev@saveoursecrets.com>"]
default-run = "arb"
categories = [
  "command-line-utilities",
]

[workspace]
members = [ "crates/deepl",
  "crates/deepl",
  "crates/lib"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"]}
tracing = "0.1"

[dependencies]
serde.workspace = true
tracing.workspace = true
anyhow = "1"
clap = { version = "4.3.19", features = ["derive", "wrap_help", "env"] }
arb-lib = { version = "0.1", path = "crates/lib" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter" ] }
serde_json = "1"
csv = "1.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros"]}
