[package]
name = "arb-lib"
version = "0.1.0"
edition = "2021"
description = "Localize flutter apps with DeepL AI translations"

[dependencies]
indexmap = { version = "1", features = ["serde"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
yaml-rust2 = "0.8"
thiserror = "1"
deepl = "0.6"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
