[package]
name = "arb-lib"
version = "0.1.0"
edition = "2021"
description = "Localize flutter apps with DeepL AI translations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/arb"

[dependencies]
serde.workspace = true
tracing.workspace = true
indexmap = { version = "2", features = ["serde"]}
serde_json = "1"
yaml-rust2 = "0.8"
thiserror = "1"
deepl = { package = "deepl-pro", version = "0.1", path = "../deepl" }

[dev-dependencies]
anyhow = "1"
